test network and volume ok